##Text encoding: utf-8

2012-06-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/man/gchem3d.1: change license to GFDL-1.3+
	* docs/man/gchemcalc.1: ditto.
	* docs/man/gchempaint.1: ditto.
	* docs/man/gchemtable.1: ditto.
	* docs/man/gcrystal.1: ditto.
	* docs/man/gspectrum.1: ditto.
	* libs/gcr/atom.cc: move some code to gcu.
	* libs/gcr/atom.h: ditto.
	* libs/gcu/atom.cc: fix import from pdb files. [#36582]
	* libs/gcu/atom.h: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/molecule.h: ditto.

2012-06-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cml/cml.cc: don't free a static string. [#36582]

2012-05-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.13.90).
	* database/elements.xml.in: added flerovium and livermorium.
	* ui/libgcu/gcuperiodic.ui: ditto.

2012-04-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.h: API documentation.
	* libs/gcr/gcrcrystalviewer.h: ditto.
	* libs/gcr/grid.cc: ditto.
	* libs/gcr/grid.h: ditto.
	* libs/gcr/line.h: ditto.
	* libs/gcr/prefs.h: ditto.
	* libs/gcr/view-settings.h: ditto.
	* libs/gcr/view.h: ditto.
	* libs/gcr/window.h: ditto.
	* libs/gcu/macros.h: ditto.

2012-04-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/application.h: API documentation.
	* libs/gcr/atomsdlg.cc: ditto.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/celldlg.h: ditto.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/docprop.h: ditto.
	* libs/gcr/document.h: ditto.
	* libs/gcr/linesdlg.h: ditto.
	* libs/gcr/sizedlg.h: ditto.
	* libs/gcu/application.h: ditto.
	* plugins/loaders/nuts/nuts.cc: fix build on big endian machines (patch
	from Dan Horak). [#36175]

2012-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.h: API documentation and cleaning.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/docprop.h: ditto.
	* libs/gcp/document.h: ditto.