@@ -2,12 +2,12 @@
 .\"     Title: gchempaint
 .\"    Author: Jean Br\('efort <jean.brefort@normalesup.org>
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: $Date: 2012-03-28 23:02:00 +0200 (mer. 28 mars 2012) $
+.\"      Date: $Date: 2012-06-10 13:02:28 +0200 (dim. 10 juin 2012) $
 .\"    Manual: gnome-chemistry-utils
 .\"    Source: gcu 0.14
 .\"  Language: English
 .\"
-.TH "GCHEMPAINT" "1" "$Date: 2012\-03\-28 23:02:00 +0200 (mer\&. 28 mars 2012) $" "gcu 0.14" "gnome-chemistry-utils"
+.TH "GCHEMPAINT" "1" "$Date: 2012\-06\-10 13:02:28 +0200 (dim\&. 10 juin 2012) $" "gcu 0.14" "gnome-chemistry-utils"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
