@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2012-06-11  Jean Brefort  <jean.brefort@normalesup.org>
+	* fr.po: updated French translation.
+
 2012-06-03  Julian Sikorski  <belegdol@gmail.com>
 	* pl.po: updated Polish translation.
 
