@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2012-06-11  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcr/application.cc: allow pdb files in gcrystal.
+	* libs/gcr/document.cc: fix infinite loop condition. [#36583]
+	* libs/gcu/application.cc: typo.
+
 2012-06-10  Jean Bréfort  <jean.brefort@normalesup.org>
 	* docs/man/gchem3d.1: change license to GFDL-1.3+
 	* docs/man/gchemcalc.1: ditto.
